linux-rfs/iptables.rules
# Generated by iptables-save v1.4.12 on Wed Dec 10 21:05:28 2014
*filter
:INPUT DROP [2:265]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [66:7848]
:sshguard - [0:0]
-A INPUT -s 43.255.0.0/16 -j DROP
-A INPUT -s 61.174.0.0/16 -j DROP
-A INPUT -s 218.65.30.0/24 -j DROP
-A INPUT -s 218.87.0.0/16 -j DROP
-A INPUT -s 104.236.123.0/24 -j DROP
-A INPUT -s 119.97.202.161 -j DROP
-A INPUT -s 180.210.234.0/24 -j DROP
-A INPUT -s 190.210.182.225 -j DROP
-A INPUT -s 201.234.7.10 -j DROP
-A INPUT -s 61.160.0.0/16 -j DROP
-A INPUT -s 61.240.0.0/16 -j DROP
-A INPUT -s 80.242.123.0/24 -j DROP
-A INPUT -s 182.100.67.0/24 -j DROP
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -m limit --limit 30/min -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 600 --hitcount 8 --name DEFAULT --rsource -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 600 --hitcount 4 --name DEFAULT --rsource -j LOG
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name DEFAULT --rsource
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT -s 192.168.1.0/24
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT -s 24.153.0.0/16
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT -s 192.168.1.0/24
-A INPUT -p tcp -m tcp --dport 139 -j ACCEPT -s 192.168.1.0/24
-A INPUT -p tcp -m tcp --dport 445 -j ACCEPT -s 192.168.1.0/24
-A INPUT -p tcp -m tcp --dport 901 -j ACCEPT -s 192.168.1.0/24
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT -s 192.168.1.0/24
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT -s 192.168.1.0/24
-A INPUT -p tcp -m tcp --dport 8081 -j ACCEPT -s 192.168.1.0/24
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Wed Dec 10 21:05:28 2014
